--- a/index.html
+++ b/index.html
@@ -43,9 +43,17 @@
               .text("What \"Tufts\" Issues Are Important To You?");
 
 
-var margin = {top: 100, right: 20, bottom: 10, left: 115},
-    width = 800 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+
+// var margin = {top: 100, right: 20, bottom: 10, left: 115},
+//     width = 800 - margin.left - margin.right,
+//     height = 500 - margin.top - margin.bottom;
+
+
+var margin = {top: 100, right: 20, bottom: 10, left: 110},
+    width = parseInt(d3.select('#figure').style('width'), 10),
+    width = 650 - margin.left - margin.right,
+    height = 300 - margin.top - margin.bottom;
+
 
 var y = d3.scale.ordinal()
     .rangeRoundBands([0, height], .3);
@@ -75,117 +83,138 @@ var svg = d3.select("#figure").append("svg")
 
   d3.csv("raw_data.csv", function(error, data) {
 
-  data.forEach(function(d) {
-    // calc percentages
-    d["Unimportant"] = +d[1]*100/d.N;
-    d["Somewhat unimportant"] = +d[2]*100/d.N;
-    d["Neutral"] = +d[3]*100/d.N;
-    d["Important"] = +d[4]*100/d.N;
-    d["Very important"] = +d[5]*100/d.N;
-    var x0 = -1*(d["Neutral"]/2+d["Somewhat unimportant"]+d["Very important"]);
-    var idx = 0;
-    d.boxes = color.domain().map(function(name) { return {name: name, x0: x0, x1: x0 += +d[name], N: +d.N, n: +d[idx += 1]}; });
-  });
+    data.forEach(function(d) {
+      // calc percentages
+      d["Unimportant"] = +d[1]*100/d.N;
+      d["Somewhat unimportant"] = +d[2]*100/d.N;
+      d["Neutral"] = +d[3]*100/d.N;
+      d["Important"] = +d[4]*100/d.N;
+      d["Very important"] = +d[5]*100/d.N;
+      var x0 = -1*(d["Neutral"]/2+d["Somewhat unimportant"]+d["Very important"]);
+      var idx = 0;
+      d.boxes = color.domain().map(function(name) { 
+        return {name: name, x0: x0, x1: x0 += +d[name], N: +d.N, n: +d[idx += 1]}; });
+    });
 
-  var min_val = d3.min(data, function(d) {
-          return d.boxes["0"].x0;
-          });
+    var min_val = d3.min(data, function(d) {
+            return d.boxes["0"].x0;
+            });
 
-  var max_val = d3.max(data, function(d) {
-          return d.boxes["4"].x1;
-          });
+    var max_val = d3.max(data, function(d) {
+            return d.boxes["4"].x1;
+            });
 
-  x.domain([min_val, max_val]).nice();
-  y.domain(data.map(function(d) { return d.Question; }));
+    x.domain([min_val, max_val]).nice();
+    y.domain(data.map(function(d) { return d.Question; }));
 
-  svg.append("g")
-      .attr("class", "x axis")
-      .call(xAxis);
+    svg.append("g")
+        .attr("class", "x axis")
+        .call(xAxis);
 
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-      .selectAll("text")  
-        .style("font-size", "15px");
+    svg.append("g")
+        .attr("class", "y axis")
+        .call(yAxis)
+        .selectAll("text")  
+          .style("font-size", "15px");
 
-  var vakken = svg.selectAll(".question")
-      .data(data)
-    .enter().append("g")
-      .attr("class", "bar")
-      .attr("transform", function(d) { return "translate(0," + y(d.Question) + ")"; });
+    var vakken = svg.selectAll(".question")
+        .data(data)
+      .enter().append("g")
+        .attr("class", "bar")
+        .attr("transform", function(d) { return "translate(0," + y(d.Question) + ")"; });
 
-  var bars = vakken.selectAll("rect")
-      .data(function(d) { return d.boxes; })
-    .enter().append("g").attr("class", "subbar");
+    var bars = vakken.selectAll("rect")
+        .data(function(d) { return d.boxes; })
+      .enter().append("g").attr("class", "subbar");
 
-  bars.append("rect")
-      .attr("height", y.rangeBand())
-      .attr("x", function(d) { return x(d.x0); })
-      .attr("width", function(d) { return x(d.x1) - x(d.x0); })
-      .style("fill", function(d) { return color(d.name); });
+    bars.append("rect")
+        .attr("height", y.rangeBand())
+        .attr("x", function(d) { return x(d.x0); })
+        .attr("width", function(d) { return x(d.x1) - x(d.x0); })
+        .style("fill", function(d) { return color(d.name); });
 
-  bars.append("text")
-      .attr("x", function(d) { return x(d.x0); })
-      .attr("y", y.rangeBand()/2)
-      .attr("dy", "0.5em")
-      .attr("dx", "0.5em")
-      .style("font-size" ,"13px")
-      .style("text-anchor", "begin")
-      .text(function(d) { return d.n !== 0 && (d.x1-d.x0)>5 ? d.n+"%" : "" });
+    bars.append("text")
+        .attr("x", function(d) { return x(d.x0); })
+        .attr("y", y.rangeBand()/2)
+        .attr("dy", "0.5em")
+        .attr("dx", "0.5em")
+        .style("font-size" ,"13px")
+        .style("text-anchor", "begin")
+        .text(function(d) { return d.n !== 0 && (d.x1-d.x0)>5 ? d.n+"%" : "" });
 
-  vakken.insert("rect",":first-child")
-      .attr("height", y.rangeBand())
-      .attr("x", "1")
-      .attr("width", width)
-      .attr("fill-opacity", "0.5")
-      .style("fill", "#F5F5F5")
-      .attr("class", function(d,index) { return index%2==0 ? "even" : "uneven"; });
+    vakken.insert("rect",":first-child")
+        .attr("height", y.rangeBand())
+        .attr("x", "1")
+        .attr("width", width)
+        .attr("fill-opacity", "0.5")
+        .style("fill", "#F5F5F5")
+        .attr("class", function(d,index) { return index%2==0 ? "even" : "uneven"; });
 
-  svg.append("g")
-      .attr("class", "y axis")
-  .append("line")
-      .attr("x1", x(0))
-      .attr("x2", x(0))
-      .attr("y2", height);
+    svg.append("g")
+        .attr("class", "y axis")
+    .append("line")
+        .attr("x1", x(0))
+        .attr("x2", x(0))
+        .attr("y2", height);
 
-  var startp = svg.append("g").attr("class", "legendbox").attr("id", "mylegendbox");
-  // this is not nice, we should calculate the bounding box and use that
-  var legend_tabs = [0, 110, 270, 360, 450];
-  var legend = startp.selectAll(".legend")
-      .data(color.domain().slice())
-    .enter().append("g")
-      .attr("class", "legend")
-      .attr("transform", function(d, i) { return "translate(" + legend_tabs[i] + ",-45)"; });
+    var startp = svg.append("g").attr("class", "legendbox").attr("id", "mylegendbox");
+    // this is not nice, we should calculate the bounding box and use that
+    var legend_tabs = [0, 110, 270, 360, 450];
+    var legend = startp.selectAll(".legend")
+        .data(color.domain().slice())
+      .enter().append("g")
+        .attr("class", "legend")
+        .attr("transform", function(d, i) { return "translate(" + legend_tabs[i] + ",-45)"; });
 
-  legend.append("rect")
-      .attr("x", 0)
-      .attr("width", 18)
-      .attr("height", 18)
-      .style("fill", color);
+    legend.append("rect")
+        .attr("x", 0)
+        .attr("width", 18)
+        .attr("height", 18)
+        .style("fill", color);
 
-  legend.append("text")
-      .attr("x", 25)
-      .attr("y", 9)
-      .attr("dy", ".35em")
-      .style("text-anchor", "begin")
-      .style("font-size" ,"13px")
-      .text(function(d) { return d; });
+    legend.append("text")
+        .attr("x", 25)
+        .attr("y", 9)
+        .attr("dy", ".35em")
+        .style("text-anchor", "begin")
+        .style("font-size" ,"13px")
+        .text(function(d) { return d; });
 
-  d3.selectAll(".axis path")
-      .style("fill", "none")
-      .style("stroke", "#000")
-      .style("shape-rendering", "crispEdges")
+    d3.selectAll(".axis path")
+        .style("fill", "none")
+        .style("stroke", "#000")
+        .style("shape-rendering", "crispEdges")
 
-  d3.selectAll(".axis line")
-      .style("fill", "none")
-      .style("stroke", "#000")
-      .style("shape-rendering", "crispEdges")
+    d3.selectAll(".axis line")
+        .style("fill", "none")
+        .style("stroke", "#000")
+        .style("shape-rendering", "crispEdges")
 
-  var movesize = width/2 - startp.node().getBBox().width/2;
-  d3.selectAll(".legendbox").attr("transform", "translate(" + movesize  + ",0)");
+    var movesize = width/2 - startp.node().getBBox().width/2;
+    d3.selectAll(".legendbox").attr("transform", "translate(" + movesize  + ",0)");
 
 
 });
+
+
+  // rescale d3 elements on window resize
+  d3.select(window).on('resize', resize); 
+
+  function resize() {
+      // update width
+      width = parseInt(d3.select('#figure').style('width'), 10);
+      width = width - margin.left - margin.right;
+
+      // reset x range
+      x.rangeRound([0, width]);
+
+      // do the actual resize...
+      svg.selectAll
+
+  }
+
+
+
 </script>
 
 </body>
